Estilos formularios y Cluster Logo Hyperlink añadido

--- a/Front/src/app/header/header.component.html
+++ b/Front/src/app/header/header.component.html
@@ -1,6 +1,8 @@
-<mat-toolbar color="accent">
-  <img src="assets/img/logo-clustertic.png" alt="Logo" />
-
+<mat-toolbar>
+  <a [routerLink]="['/main/ofertas']" class="logo-link">
+    <img src="assets/img/logo-clustertic.png" alt="Logo" />
+  </a>
+  
   <span class="fill-remaining-space"></span>
 
   <!-- Botón del menú tipo ASUS -->
