--- a/Front/src/app/app.component.css
+++ b/Front/src/app/app.component.css
@@ -1,13 +1,9 @@
 * {
   box-sizing: border-box;
+  height: 100%;
   margin: 0;
   padding: 0;
-}
- 
-html,
-body {
-  height: 100%;
-  overflow: hidden;
+  background-color: #D6D6D6; /* BLANCO MEDIO */
 }
  
 .content {
