--- a/Front/src/app/header/header.component.css
+++ b/Front/src/app/header/header.component.css
@@ -1,10 +1,24 @@
 mat-toolbar {
   position: relative;
+  background-color: #1F1F1F; /* NEGRO MEDIO*/
 }
 
 mat-toolbar img {
   margin: 1rem 1rem 1rem 0;
   max-height: 90%;
+}
+
+.logo-link {
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.logo-link img {
+  max-height: 60px;
+  width: auto;
+  object-fit: contain;
 }
 
 .fill-remaining-space {
