--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -15,9 +15,9 @@
       </mat-card-content>
 
       <mat-card-actions class="card-actions">
-        <button mat-icon-button matTooltip="Ver detalles de la oferta" class="tooltip-button">
+        <!-- <button mat-icon-button matTooltip="Ver detalles de la oferta" class="tooltip-button">
           <mat-icon id="info">info</mat-icon>
-        </button>
+        </button> -->
         <button mat-icon-button matTooltip="Inscribirse a la oferta" (click)="applyOffer(offer.id)" class="tooltip-button">
           <mat-icon id="apply">work</mat-icon>
         </button>
