--- a/Front/src/app/main/login/login.component.css
+++ b/Front/src/app/main/login/login.component.css
@@ -6,7 +6,7 @@
   height: 400px;
   border-radius: 15px;
   overflow: hidden;
-  margin: 7% auto auto auto;
+  margin: 7% auto 3% auto;
   color: #F2F2F2;   /* BLANCO CLARO */
   background-color: #3D3D3D;   /*NEGRO CLARO*/
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
