--- a/Front/src/app/main/publish-offer/publish-offer.component.css
+++ b/Front/src/app/main/publish-offer/publish-offer.component.css
@@ -2,17 +2,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5%;
-  margin-bottom: 1%;
+  min-height: 80vh; /* Usar 80% de la altura de la ventana */
+  margin: 0; /* Eliminar márgenes existentes */
 }
 
 form {
-  width: 25vw;
+  width: 30vw;
   background-color: #f9f9f9;
   padding: 25px 30px;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0; /* Asegurar que no haya márgenes interfiriendo */
 }
 
 h2 {
@@ -55,4 +56,27 @@ button:hover {
   font-weight: 600;
   margin-top: 15px;
   text-align: center;
+}
+
+.warn-limit {
+  color: #e61b15;
+  font-weight: bold;
+}
+
+mat-hint {
+  transition: color 0.3s ease;
+}
+
+textarea {
+  resize: none !important;
+  min-height: 12.5rem !important; /* Aproximadamente 16 líneas (20px por línea) */
+  height: 12.5rem !important;
+  overflow-y: auto;
+}
+
+/* Para dispositivos móviles */
+@media (max-width: 768px) {
+  form {
+    width: 90vw; /* Ancho más amplio en móviles */
+  }
 }
