--- a/Front/src/app/main/publish-offer/publish-offer.component.css
+++ b/Front/src/app/main/publish-offer/publish-offer.component.css
@@ -8,7 +8,7 @@
 
 form {
   width: 30vw;
-  background-color: #f9f9f9;
+  background-color: #3d3d3d; /*NEGRO CLARO*/
   padding: 25px 30px;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -19,7 +19,7 @@ form {
 h2 {
   text-align: center;
   margin-bottom: 25px;
-  color: #333333;
+  color: #f2f2f2;
 }
 
 mat-form-field {
@@ -41,7 +41,7 @@ button {
 }
 
 button:hover {
-  background-color: #333333;
+  background-color: #bb1711; /* ROJO OSCURO*/
 }
 
 .success-message {
@@ -65,6 +65,7 @@ button:hover {
 
 mat-hint {
   transition: color 0.3s ease;
+  color: #e61b15;
 }
 
 textarea {
