--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -18,7 +18,7 @@
         <!-- <button mat-icon-button matTooltip="Ver detalles de la oferta" class="tooltip-button">
           <mat-icon id="info">info</mat-icon>
         </button> -->
-        <button mat-icon-button matTooltip="Inscribirse a la oferta" (click)="applyOffer(offer.id)" class="tooltip-button">
+        <button *ngIf="companyName==''" mat-icon-button matTooltip="Inscribirse a la oferta" (click)="applyOffer(offer.id)" class="tooltip-button">
           <mat-icon id="apply">work</mat-icon>
         </button>
       </mat-card-actions>
