Comentamos botones sin funcionalidad para que no nos riñan Millán y Juanjo

--- a/Front/src/app/app.component.html
+++ b/Front/src/app/app.component.html
@@ -50,14 +50,14 @@
               <mat-icon>business</mat-icon>
               <span>Empresas</span>
             </a>
-            <a mat-list-item routerLink="/main/admin/ofertas" [class.active]="isActiveAdminSection('ofertas')" (click)="sidenav.close()">
+            <!-- <a mat-list-item routerLink="/main/admin/ofertas" [class.active]="isActiveAdminSection('ofertas')" (click)="sidenav.close()">
               <mat-icon>work</mat-icon>
               <span>Ofertas</span>
             </a>
             <a mat-list-item routerLink="/main/admin/candidatos" [class.active]="isActiveAdminSection('candidatos')" (click)="sidenav.close()">
               <mat-icon>person</mat-icon>
               <span>Candidatos</span>
-            </a>
+            </a> -->
           </ng-container>
         </mat-nav-list>
       </mat-sidenav>
