--- a/Front/src/app/main/admin-panel/admin-panel.component.html
+++ b/Front/src/app/main/admin-panel/admin-panel.component.html
@@ -68,7 +68,7 @@
         </tr>
       </table>
 
-      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Seleccionar página de empresas"></mat-paginator>
+      <!-- <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Seleccionar página de empresas"></mat-paginator> -->
     </div>
 
     <!-- Mensaje cuando no hay empresas -->
