--- a/Front/src/app/main/offer-details/offer-details.component.html
+++ b/Front/src/app/main/offer-details/offer-details.component.html
@@ -13,20 +13,20 @@
   <!-- Pestañas con Material Tabs -->
   <mat-tab-group class="offer-tabs" *ngIf="offer">
     <!-- Pestaña de Detalles de la Oferta -->
-    <mat-tab label="Detalles de la Oferta">
+    <mat-tab label="Detalles de la oferta">
       <div class="tab-content">
         <mat-card class="details-card">
           <mat-card-header>
-            <mat-card-title>Descripción del Puesto</mat-card-title>
+            <mat-card-title><h2>Oferta</h2></mat-card-title>
           </mat-card-header>
           <mat-card-content>
             <div class="offer-details">
               <div class="detail-item">
-                <strong>Título:</strong>
+                <h3>Título:</h3>
                 <p>{{ offer.title }}</p>
               </div>
               <div class="detail-item">
-                <strong>Descripción:</strong>
+                <h3>Descripción:</h3>
                 <p>{{ offer.offerDescription }}</p>
               </div>
               <!-- <div class="detail-item">
@@ -44,10 +44,10 @@
     </mat-tab>
 
     <!-- Pestaña de Candidatos -->
-    <mat-tab label="Candidatos Aplicados">
+    <mat-tab label="Candidatos inscritos">
       <div class="tab-content">
         <div class="candidates-header">
-          <h2>Candidatos que han aplicado</h2>
+          <h2>Candidatos inscritos</h2>
           <span class="candidates-count">{{ candidates.length }} candidatos</span>
         </div>
         
